refactoring the command execution method